--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "boxicons": "^2.0.7",
     "chart.js": "^3.2.1",
     "core-js": "^3.9.1",
+    "is-empty": "^1.2.0",
+    "js-cookie": "^2.2.1",
+    "numeral": "^2.0.6",
     "nuxt": "^2.15.3",
     "nuxt-highcharts": "^1.0.7",
     "nuxt-validate": "^1.0.1",
@@ -30,7 +33,8 @@
     "vue-trend-chart": "^0.15.3",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuelidate": "^0.7.6",
-    "vuesax": "^4.0.1-alpha.25"
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
